Fix for Bug #102392.  Refined COM code to detect whether mozilla is running or not.  This is required to support multiple sends from the Application. r=dougt, sr=mscott a=PDT